
Version (SVN)
-------------

XML:   Fixed bug CASTOR-721 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with support for final modifier at the class level during source generation.
       Details: http://jira.codehaus.org/browse/CASTOR-721
       (Werner - 20060726)

XML:   Fixed bug CASTOR-786 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed unnecessary import statements addition for java.io.* during source generation
       Details: http://jira.codehaus.org/browse/CASTOR-786
       (Werner - 20060726)

JDO:   Fixed bug CASTOR-1479 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made EmptyEnumerator implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-147X
       (Werner - 20060725)

JDO:   Resolved issue CASTOR-1476 using contribution from Dave Brosius [dbrosius@mebigfatguy.com]
       Removed unnecessary object construction.
       Details: http://jira.codehaus.org/browse/CASTOR-1476
       (Ralf - 20060721)

XML:   Fixed bug CASTOR-1469 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new property to castor.properties to disable use of '.castor.xml' selectively.
       Details: http://jira.codehaus.org/browse/CASTOR-1475
       (Werner - 20060713)

JDO:   Resolved issue CASTOR-1473 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Added posibility to retrieve ClassDescriptor.
       Details: http://jira.codehaus.org/browse/CASTOR-1473
       (Ralf - 20060710)

XML:   Fixed bug CASTOR-1470 using contribution from David Buschman [dbuschman7@yahoo.com]
       Added support for Java 5 compatible source code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1470
       (Werner - 20060707)

JDO:   Resolved issue CASTOR-1472 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Allowed to specify base URI at JDOManager.loadConfiguration().